# AI-Customer-Support-Platform

./: .env.example  .gitignore  README.md  learning.txt
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/api/: apps.py  authentication.py  jwt_utils.py  models.py  permissions.py  serializers.py  tasks.py  urls.py
backend/api/services/: __init__.py  knowledge.py
backend/api/views/: __init__.py  admin_assistant.py  analytics.py  api_keys.py  auth.py  billing.py  chat.py  chatbots.py  crawler.py  integrations.py  knowledge.py  search.py  tickets.py  voice.py  workspaces.py
backend/app/ai/: rag_engine.py
backend/app/core/: tenant.py
backend/app/repositories/: analytics_repository.py  api_key_repository.py  conversation_repository.py  document_repository.py  ticket_repository.py  user_repository.py  workspace_member_repository.py
backend/app/schemas/: knowledge.py
backend/app/services/: admin_assistant_service.py  api_platform_service.py  chatbot_service.py
backend/app/utils/: storage.py
backend/app/workers/: analytics_tasks.py  celery_app.py
backend/app_fastapi_backup/ai/: embeddings.py  llm_client.py
backend/app_fastapi_backup/core/: config.py  deps.py  security.py
backend/app_fastapi_backup/repositories/: base.py  chatbot_repository.py  crawler_repository.py  integration_repository.py  subscription_repository.py
backend/app_fastapi_legacy/: main.py
backend/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/core/: apps.py  config.py  enums.py  settings_helpers.py
backend/tests/: test_django_health.py
(+115 files in other folders)
