[project]
name = "support-ai-backend"
version = "1.0.0"
description = "AI Customer Support SaaS Platform Backend"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
