[project]
name = "support-ai-backend"
version = "2.0.0"
description = "AI Customer Support SaaS Platform Backend (Django REST Framework)"
requires-python = ">=3.12"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
addopts = "-v"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
